--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Home
+description: Personal blog
 github_username: andrewryanx
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "fastpages"
+#github_repo: "fastpages"
+
+author:
+  name: 'Andrew Ryan'
+  email: andrrvt15@gmail.com
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
@@ -39,8 +43,9 @@ baseurl: "/fastpages" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    github: andrewryanx 
+    linkedin: andreweryan
+    twitter: andrewryan_
 
 # Set this to true to get LaTeX math equation support
 use_math: 
@@ -58,7 +63,7 @@ annotations: false
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: 
+google_analytics: UA-130824915-1
 
 exclude:
   - docker-compose.yml
