--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Home
 description: Personal blog
 github_username: andrewryanx
 # you can comment the below line out if your repo name is not different than your baseurl
-#github_repo: "fastpages"
+#github_repo: "site"
 
 author:
   name: 'Andrew Ryan'
@@ -38,7 +38,7 @@ url: "https://andrewryanx.github.io" # the base hostname & protocol for your sit
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/fastpages" # the subpath of your site, e.g. "/blog".
+baseurl: "/site" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
